--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -21,8 +22,7 @@
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
-    "extends": 
-      "react-app"
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
